# voice-ai-governance

./: ADOPTION.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/skills/: add-telephony-adapter.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-platform-adapter.md
.github/workflows/: ci.yml  labeler.yml  pr-title-check.yml  stale.yml  welcome.yml
examples/: tcpa_hipaa_voice_session.py
src/voice_ai_governance/: __init__.py  async_state.py  ccpa.py  compliance.py  escalation.py  pii.py  sms.py  state.py
src/voice_ai_governance/adapters/: amazon_connect.py  livekit.py  pipecat.py  twilio.py  twilio_sms.py
tests/: conftest.py  test_amazon_connect_adapter.py  test_async_state.py  test_ccpa.py  test_compliance.py  test_escalation.py  test_livekit_adapter.py  test_pii.py  test_sms.py  test_state.py
