[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-ai-governance"
version = "0.2.0"
description = "Compliance enforcement middleware for voice and SMS AI pipelines: warm transfer state management, TCPA/A2P 10DLC SMS compliance, PII scrubbing, confidence-gated escalation, and HIPAA/FERPA/EU AI Act enforcement for Pipecat, LiveKit, and Twilio deployments."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ashutosh Rana", email = "17191144+ashutoshrana@users.noreply.github.com"},
]
keywords = [
    "voice-ai", "warm-transfer", "hipaa", "ferpa", "eu-ai-act",
    "pii-scrubbing", "compliance", "pipecat", "twilio", "livekit",
    "contact-center", "voice-agent", "escalation", "confidence-gating",
    "owasp-agentic-ai", "regulated-industries", "enterprise-ai",
    "tcpa", "a2p-10dlc", "sms-compliance", "twilio-sms", "omnichannel-consent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=4.0"]
pipecat = ["pipecat-ai>=0.0.46"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/ashutoshrana/voice-ai-governance"
Documentation = "https://github.com/ashutoshrana/voice-ai-governance#readme"
Repository = "https://github.com/ashutoshrana/voice-ai-governance"
Issues = "https://github.com/ashutoshrana/voice-ai-governance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_ai_governance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/voice_ai_governance"]
branch = true
